fix overflow

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -5,3 +5,8 @@
   background-size: cover;
   overflow: auto;
 }
+@media screen and (max-width: 1400px) {
+ .main {
+   overflow: visible ;
+ }
+}
